--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,11 @@ android {
             storePassword '2542000'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.iloveallah.itsharks"
-        minSdkVersion 17
-        targetSdkVersion 25
+        minSdkVersion 16
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         // multiDexEnabled true
@@ -30,19 +29,25 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.squareup.picasso:picasso:2.4.0'
-    compile 'com.android.support:design:24.2.0'
-    // compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'com.google.firebase:firebase-core:10.2.6'
-    compile 'com.google.firebase:firebase-database:10.2.6'
-    compile 'com.google.firebase:firebase-core'
-    //compile 'com.android.support:multidex:1.0.0'
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+
+
+
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:design:28.0.0-alpha1'
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.squareup.picasso:picasso:2.4.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.google.firebase:firebase-core'
+
+    implementation 'com.google.android.gms:play-services-analytics:16.0.1'
+    implementation 'com.github.dimorinny:floating-text-button:0.0.4'
+
 }
 apply plugin: 'com.google.gms.google-services'
