--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:label="It Sharks"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -26,23 +26,23 @@
         <activity
             android:name=".ui.CoursesActivity"
             android:label="Courses"
-            android:theme="@style/Theme.AppCompat.Light" />
+             />
         <activity
             android:name=".ui.InstructorsActivity"
             android:label="Instructors"
-            android:theme="@style/Theme.AppCompat.Light" />
+             />
         <activity
             android:name=".ui.ContactActivity"
             android:label="Contact"
-            android:theme="@style/Theme.AppCompat.Light" />
+            />
         <activity
             android:name=".ui.CourseInfoAndContentActivity"
             android:label="Course Data"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".ui.ReviewTabsActivity"
             android:label="Reviews"
-            android:theme="@style/Theme.AppCompat.Light" />
+             />
 
         <receiver android:name=".widget.Widget">
             <intent-filter>
