--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,6 +19,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
+        maven { url "https://jitpack.io" }
     }
 }
 
